--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ flask-cors = "*"
 faker = "*"
 marshmallow = "*"
 requests = "*"
+gunicorn = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_full_version = "3.8.13"
